Bug 1073716: Use C++ std::abs() instead of C abs(), for non-'int'-typed values, to address clang warning. r=ehsan